--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Simple.
 
+1.17  2018-08-30 ASHLEY
+      - Support for SameSite; https://www.owasp.org/index.php/SameSite
+
 1.16  2018-07-25 MANWAR
       - Made t/manifest.t AUTHOR only (RT #125383).
       - Removed +x bits from test scripts.
